--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				function update(text, rr) {
 
 					// If there is no text to transliterate just display a sample message
-					if (romanized.innerHTML === '') {
+					if (input_text.value === '') {
 						romanized.innerHTML = 'Enter Korean text in the input box above';
 						return;
 					}
